# custom-SSR-with-HTMX

./: .rules  Cargo.toml  ast.json  component.html  component.js  example.js  to test.md  todo.md
server/: component.js  main.js  main.jsx  myButton.js
src/: discover.rs  main.rs
