[package]
name = "htmx-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "6.0.0"
hotwatch = "0.5.0"
serde_json = "1.0.123"
swc_common = "0.37.2"
swc_ecma_ast = {version = "0.118.0", features = ["serde-impl"]}
swc_ecma_codegen = "0.155.0"
swc_ecma_parser = "0.149.0"
swc_ecma_visit = "0.104.3"
